--- a/meet.html
+++ b/meet.html
@@ -162,15 +162,9 @@
                 <img src="./images/Danielle Copeland.jpeg" alt="Team Member 1">
                 <div class="card-content">
                     <h3>Danielle Copeland</h3>
-                    <p class="bio">Danielle Copeland is the Project Manager for Copeland Contracting for a few years.Danielle has been managing residential and commercial projects w/ the help of local subcontractors.</p>
-                </div>
-            </div>
-        
-            <div class="team-card">
-                <img src="./images/david sain.jpeg" alt="Team Member 2">
-                <div class="card-content">
-                    <h3>Jane Smith</h3>
-                    <p class="bio">Bio to come</p>
+                    <p class="bio">Danielle Copeland is the Project Manager for Copeland Contracting for a few years. Danielle has been managing residential and commercial projects w/ the help of local subcontractors. She enjoys the overseeing renovations. Danielle has a background in Medical Administration. She previously worked for Parkview and Lutheran Hospitals before solely joining the family business. Danielle is actively involved in her community. She is the building Commissioner for the Oxford Association. She is responsible for bringing the building to code. Danielle intends to cultivate several programs through the Oxford Association, all geared toward youth, homeowners, and entrepreneurs. Danielle intends to help build up our community in any way possible.
+
+                    </p>
                 </div>
             </div>
 
@@ -178,6 +172,14 @@
                 <img src="./images/Shawn hagler.jpeg" alt="Team Member 2">
                 <div class="card-content">
                     <h3>Shawn Hagler</h3>
+                    <p class="bio">Bio to come</p>
+                </div>
+            </div>
+
+            <div class="team-card">
+                <img src="./images/david sain.jpeg" alt="Team Member 2">
+                <div class="card-content">
+                    <h3>David Sain</h3>
                     <p class="bio">Bio to come</p>
                 </div>
             </div>
